--- a/Audiosurf2_Tools/Audiosurf2_Tools.csproj
+++ b/Audiosurf2_Tools/Audiosurf2_Tools.csproj
@@ -1,28 +1,29 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <OutputType>WinExe</OutputType>
+        <TargetFramework>net6.0-windows</TargetFramework>
         <Nullable>enable</Nullable>
-        <TargetFrameworks>net6.0-windows</TargetFrameworks>
     </PropertyGroup>
     <ItemGroup>
+        <Folder Include="Models\" />
         <AvaloniaResource Include="Assets\**" />
         <None Remove=".gitignore" />
     </ItemGroup>
     <ItemGroup>
-        <PackageReference Include="Aura.UI" Version="0.1.4.2" />
-        <PackageReference Include="Aura.UI.FluentTheme" Version="0.1.4.2" />
-        <PackageReference Include="Avalonia" Version="0.10.11" />
-        <PackageReference Include="Avalonia.Desktop" Version="0.10.11" />
+        <PackageReference Include="Aura.UI" Version="0.1.5-dev-04" />
+        <PackageReference Include="Aura.UI.FluentTheme" Version="0.1.5-dev-04" />
+        <PackageReference Include="Avalonia" Version="0.10.12" />
+        <PackageReference Include="Avalonia.Desktop" Version="0.10.12" />
+        <PackageReference Include="Avalonia.Diagnostics" Version="0.10.12" />
         <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
-        <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.11" />
-        <PackageReference Include="MessageBox.Avalonia" Version="1.7.1" />
-        <PackageReference Include="Microsoft.Win32.Registry" Version="5.0.0" />
-        <PackageReference Include="PlaylistsNET" Version="1.1.3" />
-        <PackageReference Include="taglib-sharp-netstandard2.0" Version="2.1.0" />
-        <PackageReference Include="TwitchLib" Version="3.3.0" />
-        <PackageReference Include="YoutubeExplode" Version="6.0.7" />
+        <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.12" />
+        <PackageReference Include="Avalonia.Svg" Version="0.10.12" />
+        <PackageReference Include="ReactiveUI.Fody" Version="17.1.17" />
     </ItemGroup>
-    <ItemGroup Condition=" '$(Configuration)' == 'Debug' ">
-        <PackageReference Include="Avalonia.Diagnostics" Version="0.10.11" />
+    <ItemGroup>
+      <Compile Update="MiniControls\BotSetupStepExtra.axaml.cs">
+        <DependentUpon>BotSetupStepExtra.axaml</DependentUpon>
+        <SubType>Code</SubType>
+      </Compile>
     </ItemGroup>
 </Project>
