--- a/Audiosurf2_Tools/Audiosurf2_Tools.csproj
+++ b/Audiosurf2_Tools/Audiosurf2_Tools.csproj
@@ -24,6 +24,7 @@
         <PackageReference Include="PlaylistsNET" Version="1.1.3" />
         <PackageReference Include="ReactiveUI.Fody" Version="17.1.17" />
         <PackageReference Include="System.Data.SQLite" Version="1.0.115.5" />
+        <PackageReference Include="ThemeEditor.Controls.ColorPicker" Version="0.10.12" />
         <PackageReference Include="TwitchLib" Version="3.3.0" />
         <PackageReference Include="YoutubeExplode" Version="6.0.7" />
     </ItemGroup>
