--- a/Audiosurf2_Tools/Audiosurf2_Tools.csproj
+++ b/Audiosurf2_Tools/Audiosurf2_Tools.csproj
@@ -27,5 +27,6 @@
         <PackageReference Include="ThemeEditor.Controls.ColorPicker" Version="0.10.12" />
         <PackageReference Include="TwitchLib" Version="3.3.0" />
         <PackageReference Include="YoutubeExplode" Version="6.0.7" />
+        <PackageReference Include="z440.atl.core" Version="4.3.0" />
     </ItemGroup>
 </Project>
