--- a/Audiosurf2_Tools/Audiosurf2_Tools.csproj
+++ b/Audiosurf2_Tools/Audiosurf2_Tools.csproj
@@ -1,10 +1,16 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <OutputType>WinExe</OutputType>
-        <TargetFramework>net6.0-windows</TargetFramework>
         <Nullable>enable</Nullable>
         <TrimMode>copyused</TrimMode>
         <BuiltInComInteropSupport>true</BuiltInComInteropSupport>
+        <Configurations>Debug;Release;Linux</Configurations>
+        <Platforms>AnyCPU</Platforms>
+        <TargetFrameworks>net6.0;net6.0-windows</TargetFrameworks>
+    </PropertyGroup>
+    <PropertyGroup Condition=" '$(Configuration)' == 'Linux' ">
+      <DefineConstants>TRACE;LINUX</DefineConstants>
+      <Optimize>true</Optimize>
     </PropertyGroup>
     <ItemGroup>
         <Folder Include="Models\" />
@@ -26,7 +32,7 @@
         <PackageReference Include="System.Data.SQLite" Version="1.0.115.5" />
         <PackageReference Include="ThemeEditor.Controls.ColorPicker" Version="0.10.12" />
         <PackageReference Include="TwitchLib" Version="3.3.0" />
-        <PackageReference Include="YoutubeExplode" Version="6.1.1" />
+        <PackageReference Include="YoutubeExplode" Version="6.1.2" />
         <PackageReference Include="z440.atl.core" Version="4.4.0" />
     </ItemGroup>
 </Project>
